fix(style): remove blurry 'menu-bar'

--- a/theme/css/custom-style.css
+++ b/theme/css/custom-style.css
@@ -19,8 +19,3 @@ kbd {
     border: 1px solid var(--table-header-bg);
     font-size: 0.875em;
 }
-
-#menu-bar.bordered {
-    background-color: hsla(var(--bg), 0.7);
-    backdrop-filter: blur(10px);
-}
